@@ -1,0 +1,5 @@
+{
+   "variants": {
+      "normal": {"model":"wbtc:column_glowing_plastic"}
+   }
+}
