@@ -1,0 +1,6 @@
+{
+   "parent": "item/generated",
+   "textures": {
+      "layer0": "wbtc:items/white_mushroom_dust"
+   }
+}
