@@ -1,0 +1,16 @@
+{
+   "type": "minecraft:crafting_shapeless",
+   "ingredients": [
+      {
+         "item": "minecraft:water_bucket"
+      },
+      {
+         "item": "wbtc:white_mushroom_dust"
+      }
+   ],
+   "result": {
+      "item": "wbtc:dye_white",
+      "data": 0,
+      "count": 5
+   }
+}
